test/parsetest/invalid/wrong_main.java
/* Line 3: int isn't a valid identifier */
class Clazz {
    public static void main(String[] int) {
        int foobar;
    }
}